--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,14 @@ body {
   background:-moz-radial-gradient(center, #0066FF, #0000CC);
   background:-webkit-gradient(radial, center center, 120, center center, 800, from(#0066FF), to(#0000CC));
   text-align: center;
+  width: 600px;
+  height: 400px;
+  margin: 0 auto;
+  position: absolute;
+  left:50%;
+  top:50%;
+  margin-left:-300px; 
+  margin-top:-200px; 		
 }
 
 h1 { 
