--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,12 @@
   width: 50px;
 }
 
+footer {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+}
+
 body {
   color: #EEE;
   background: #0066FF;
